@@ -23,17 +23,20 @@
  */
 package com.janilla.conduit.backend;
 
-import java.io.IOException;
 import java.time.Instant;
-import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
+import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.janilla.persistence.Crud;
 import com.janilla.persistence.Persistence;
+import com.janilla.reflect.Factory;
 import com.janilla.reflect.Reflection;
 import com.janilla.web.ForbiddenException;
 import com.janilla.web.Handle;
@@ -42,10 +45,12 @@ public class ArticleApi {
 
 	public Properties configuration;
 
+	public Factory factory;
+
 	public Persistence persistence;
 
 	@Handle(method = "POST", path = "/api/articles")
-	public Object create(Form form, User user) throws IOException {
+	public Object create(Form form, User user) {
 		var s = toSlug(form.article.title);
 		validate(null, s, form.article);
 
@@ -57,78 +62,73 @@ public class ArticleApi {
 
 		var n = Instant.now();
 		var a = new Article(null, s, null, null, null,
-				form.article.tagList() != null ? form.article.tagList().stream().sorted().toList()
-						: Collections.emptyList(),
-				n, n, user.id());
-		a = Reflection.copy(form.article, a, x -> !x.equals("id") && !x.equals("slug") && !x.equals("tagList")
-				&& !x.equals("createdAt") && !x.equals("updatedAt") && !x.equals("author"));
+//				form.article.tagList() != null ? form.article.tagList().stream().sorted().toList() : List.of(),
+				null, n, n, user.id());
+		a = Reflection.copy(form.article, a, x -> !Set.of("id", "slug",
+//						"tagList",
+				"createdAt", "updatedAt", "author").contains(x));
 		a = persistence.crud(Article.class).create(a);
 
 		return Map.of("article", a);
 	}
 
-	@Handle(method = "GET", path = "/api/articles/([^/]*)")
-	public Object read(String slug) throws IOException {
-		var ac = persistence.crud(Article.class);
-		var i = ac.find("slug", slug);
-		var a = i > 0 ? ac.read(i) : null;
-		return Collections.singletonMap("article", a);
+	@Handle(method = "GET", path = "/api/articles/([^/]+)")
+	public Object read(String slug) {
+		var c = persistence.crud(Article.class);
+		var x = c.read(c.find("slug", slug));
+		return Collections.singletonMap("article", x);
 	}
 
-	@Handle(method = "PUT", path = "/api/articles/([^/]*)")
-	public Object update(String slug, Form form, User user) throws IOException {
-		var s = form.article.title != null ? toSlug(form.article.title) : slug;
+	@Handle(method = "PUT", path = "/api/articles/([^/]+)")
+	public Object update(String slug, Form form, User user) {
+		var s = Objects.requireNonNullElse(toSlug(form.article.title), slug);
 		validate(slug, s, form.article);
 
-		var ac = persistence.crud(Article.class);
-		var i = ac.find("slug", slug);
-		var a = i > 0 ? ac.update(i, x -> {
+		var c = persistence.crud(Article.class);
+		var a = c.update(c.find("slug", slug), x -> {
 			x = new Article(x.id(), s, null, null, null,
-					form.article.tagList() != null ? form.article.tagList().stream().sorted().toList()
-							: Collections.emptyList(),
-					x.createdAt(), Instant.now(), x.author());
-			return Reflection.copy(form.article, x, y -> !y.equals("slug") && !y.equals("tagList")
-					&& !y.equals("createdAt") && !y.equals("updatedAt") && !y.equals("author"));
-		}) : null;
+//					form.article.tagList() != null ? form.article.tagList().stream().sorted().toList() : List.of(),
+					null, x.createdAt(), Instant.now(), x.author());
+			return Reflection.copy(form.article, x, y -> !Set.of("slug",
+//					"tagList",
+					"createdAt", "updatedAt", "author").contains(y));
+		});
 
 		return Collections.singletonMap("article", a);
 	}
 
-	@Handle(method = "DELETE", path = "/api/articles/([^/]*)")
-	public void delete(String slug) throws IOException {
-		var ac = persistence.crud(Article.class);
-		var i = ac.find("slug", slug);
-		if (i > 0)
-			ac.delete(i);
+	@Handle(method = "DELETE", path = "/api/articles/([^/]+)")
+	public void delete(String slug) {
+		var c = persistence.crud(Article.class);
+		c.delete(c.find("slug", slug));
 	}
 
 	@Handle(method = "GET", path = "/api/articles")
-	public Object list(Filter filter, Range range) throws IOException {
-		var t = filter != null && filter.tag != null && !filter.tag.isBlank() ? new Object[] { filter.tag }
-				: new Object[0];
-		var a = filter != null && filter.author != null && !filter.author.isBlank()
-				? new Object[] { persistence.crud(User.class).find("username", filter.author) }
-				: new Object[0];
-		var f = filter != null && filter.favorited != null && !filter.favorited.isBlank()
-				? new Object[] { persistence.crud(User.class).find("username", filter.favorited) }
-				: new Object[0];
-		var p = persistence.crud(Article.class).filter(Map.of("tagList", t, "author", a, "favoriteList", f),
-				range != null ? range.skip : 0, range != null ? range.limit : -1);
-		return Map.of("articles", persistence.crud(Article.class).read(p.ids()), "articlesCount", p.total());
+	public Object list(Filter filter, Range range) {
+		var t = Stream.of(filter != null ? filter.tag : null).filter(x -> x != null && !x.isBlank()).toArray();
+		var a = Stream.of(filter != null ? filter.author : null).filter(x -> x != null && !x.isBlank())
+				.map(x -> persistence.crud(User.class).find("username", x)).toArray();
+		var f = Stream.of(filter != null ? filter.favorited : null).filter(x -> x != null && !x.isBlank())
+				.map(x -> persistence.crud(User.class).find("username", x)).toArray();
+		var c = persistence.crud(Article.class);
+		var p = c.filter(Map.of("tagList", t, "author", a, "favoriteList", f), range != null ? range.skip : 0,
+				range != null ? range.limit : -1);
+		return Map.of("articles", c.read(p.ids()), "articlesCount", p.total());
 	}
 
 	@Handle(method = "GET", path = "/api/articles/feed")
-	public Object listFeed(Range range, User user) throws IOException {
+	public Object listFeed(Range range, User user) {
 		var u = persistence.crud(User.class).filter("followList", user.id());
-		var p = !u.isEmpty() ? persistence.crud(Article.class).filter("author", range.skip, range.limit, u.toArray())
+		var c = persistence.crud(Article.class);
+		var p = !u.isEmpty()
+				? c.filter("author", range != null ? range.skip : 0, range != null ? range.limit : -1, u.toArray())
 				: Crud.IdPage.<Long>empty();
-		return Map.of("articles", persistence.crud(Article.class).read(p.ids()), "articlesCount", p.total());
+		return Map.of("articles", c.read(p.ids()), "articlesCount", p.total());
 	}
 
-	@Handle(method = "POST", path = "/api/articles/([^/]*)/comments")
-	public Object createComment(String slug, CommentForm form, User user) throws IOException {
-		var v = new Validation();
-		v.configuration = configuration;
+	@Handle(method = "POST", path = "/api/articles/([^/]+)/comments")
+	public Object createComment(String slug, CommentForm form, User user) {
+		var v = factory.create(Validation.class);
 		if (v.isNotBlank("body", form.comment.body))
 			v.isSafe("body", form.comment.body);
 		v.orThrow();
@@ -140,71 +140,68 @@ public class ArticleApi {
 		}
 
 		var a = persistence.crud(Article.class).find("slug", slug);
-		if (a <= 0)
+		if (a == null)
 			throw new RuntimeException();
 
 		var n = Instant.now();
 		var c = new Comment(null, n, n, null, user.id(), a);
 		c = Reflection.copy(form.comment, c, x -> x.equals("body"));
 		c = persistence.crud(Comment.class).create(c);
-
 		return Map.of("comment", c);
 	}
 
-	@Handle(method = "DELETE", path = "/api/articles/([^/]*)/comments/([^/]*)")
-	public void deleteComment(String slug, Long id, User user) throws IOException {
-		var cc = persistence.crud(Comment.class);
-		var c = cc.read(id);
-		if (c.author().equals(user.id()))
-			cc.delete(id);
+	@Handle(method = "DELETE", path = "/api/articles/([^/]+)/comments/([^/]+)")
+	public void deleteComment(String slug, Long id, User user) {
+		var c = persistence.crud(Comment.class);
+		var x = c.read(id);
+		if (x.author().equals(user.id()))
+			c.delete(id);
 		else
 			throw new ForbiddenException();
 	}
 
-	@Handle(method = "GET", path = "/api/articles/([^/]*)/comments")
-	public Object listComments(String slug) throws IOException {
-		var i = persistence.crud(Article.class).find("slug", slug);
-		var cc = persistence.crud(Comment.class);
-		var j = cc.filter("article", i);
-		return Map.of("comments", cc.read(j));
+	@Handle(method = "GET", path = "/api/articles/([^/]+)/comments")
+	public Object listComments(String slug) {
+		var a = persistence.crud(Article.class).find("slug", slug);
+		var c = persistence.crud(Comment.class);
+		return Map.of("comments", c.read(c.filter("article", a)));
 	}
 
-	@Handle(method = "POST", path = "/api/articles/([^/]*)/favorite")
-	public Object favorite(String slug, User user) throws IOException {
+	@Handle(method = "POST", path = "/api/articles/([^/]+)/favorite")
+	public Object favorite(String slug, User user) {
 		if (user == null)
 			throw new NullPointerException("user=" + user);
 		var c = (ArticleCrud) persistence.crud(Article.class);
-		var i = c.find("slug", slug);
-		var a = i > 0 ? c.read(i) : null;
+		var a = c.read(c.find("slug", slug));
 		c.favorite(a.id(), a.createdAt(), user.id());
-		return Map.of("article", i);
+		return Map.of("article", a.id());
 	}
 
-	@Handle(method = "DELETE", path = "/api/articles/([^/]*)/favorite")
-	public Object unfavorite(String slug, User user) throws IOException {
+	@Handle(method = "DELETE", path = "/api/articles/([^/]+)/favorite")
+	public Object unfavorite(String slug, User user) {
 		if (user == null)
 			throw new NullPointerException("user=" + user);
-		var ac = (ArticleCrud) persistence.crud(Article.class);
-		var i = ac.find("slug", slug);
-		var a = i > 0 ? ac.read(i) : null;
-		ac.unfavorite(a.id(), a.createdAt(), user.id());
-		return Map.of("article", i);
+		var c = (ArticleCrud) persistence.crud(Article.class);
+		var a = c.read(c.find("slug", slug));
+		c.unfavorite(a.id(), a.createdAt(), user.id());
+		return Map.of("article", a.id());
 	}
 
-	static Pattern nonAlphanumeric = Pattern.compile("[^\\p{Alnum}]+", Pattern.UNICODE_CHARACTER_CLASS);
+	protected static final Pattern NON_ALPHANUMERIC = Pattern.compile("[^\\p{Alnum}]+",
+			Pattern.UNICODE_CHARACTER_CLASS);
 
 	protected String toSlug(String title) {
-		return nonAlphanumeric.splitAsStream(title.toLowerCase()).collect(Collectors.joining("-"));
+		return title != null ? NON_ALPHANUMERIC.splitAsStream(title.toLowerCase()).collect(Collectors.joining("-"))
+				: null;
 	}
 
-	protected void validate(String slug1, String slug2, Form.Article article) throws IOException {
-		var v = new Validation();
-		v.configuration = configuration;
-		var ac = persistence.crud(Article.class);
+	protected void validate(String slug1, String slug2, Form.Article article) {
+		var v = factory.create(Validation.class);
+		var c = persistence.crud(Article.class);
 		if ((slug2.equals(slug1) && article.title == null) || (v.isNotBlank("title", article.title)
 				&& v.isNotTooLong("title", article.title, 100) && v.isSafe("title", article.title))) {
-			var i = ac.filter("slug", slug2);
-			var a = ac.read(i).stream().filter(x -> !x.slug().equals(slug1)).findFirst().orElse(null);
+			var a = c.read(c.filter("slug", slug2)).stream().filter(x -> !x.slug().equals(slug1)).findFirst()
+					.orElse(null);
 			v.isUnique("title", a);
 		}
 		if ((slug2.equals(slug1) && article.description == null) || (v.isNotBlank("description", article.description)
@@ -228,7 +225,7 @@ public class ArticleApi {
 
 	public record Form(Article article) {
 
-		public record Article(String title, String description, String body, Collection<String> tagList) {
+		public record Article(String title, String description, String body, List<String> tagList) {
 		}
 	}
 
